# red-team-ai-agent

./: .gitignore  ADR.md  LICENSE  README.md  ROADMAP.md  STATUS.md  claude.md  pyproject.toml  run_tests.py
redteam/: __init__.py  cli.py
redteam/attacks/: __init__.py  base.py
redteam/attacks/prompt_injection/: __init__.py  direct_injection.py
redteam/core/: __init__.py  campaign.py  executor.py  safety.py
redteam/targets/: __init__.py  base.py
tests/: test_basic.py
