[tool.poetry]
name = "red-team-ai-agent"
version = "0.1.0"
description = "Automated AI security testing and red team attacks framework"
authors = ["Oksana Siniaieva <oksana@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Ksushik/red-team-ai-agent"
repository = "https://github.com/Ksushik/red-team-ai-agent"
documentation = "https://red-team-ai-agent.readthedocs.io"
keywords = ["ai", "security", "red-team", "testing", "prompt-injection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
aiohttp = "^3.9.0"
pydantic = "^2.5.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
redis = "^5.0.0"
celery = "^5.3.0"
openai = "^1.6.0"
anthropic = "^0.8.0"
langchain = "^0.1.0"
tiktoken = "^0.5.0"
jinja2 = "^3.1.0"
click = "^8.1.0"
rich = "^13.7.0"
loguru = "^0.7.0"
python-multipart = "^0.0.6"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
isort = "^5.13.0"
pylint = "^3.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
safety = "^2.3.0"
bandit = "^1.7.0"
factory-boy = "^3.3.0"
faker = "^21.0.0"

[tool.poetry.scripts]
redteam = "redteam.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["redteam"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]